--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- 만약 여기에 주인님이 만든 CSS 파일이 있다면 추가해줘 -->
     <!-- <link rel="stylesheet" href="style.css"> -->
     <style>
-        /* CSS 시작: 가로 스크롤 및 카드 스타일 */
+        /* CSS 시작: 가로 스크롤 및 카드 스타일 (이전과 동일) */
         .horizontal-scroll-container {
             overflow-x: auto; /* 가로 스크롤 활성화 */
             white-space: nowrap; /* 카드들이 한 줄로 이어지게 */
@@ -49,7 +49,7 @@
         }
         /* CSS 끝 */
 
-        /* 스크롤 시 나타나는 애니메이션 시작 */
+        /* 스크롤 시 나타나는 애니메이션 시작 (이전과 동일) */
         .animate-on-scroll {
             opacity: 0;
             transform: translateY(20px); /* 처음엔 살짝 아래에 위치 */
@@ -62,12 +62,33 @@
         }
         /* 스크롤 시 나타나는 애니메이션 끝 */
 
+        /* 메인 배너 배경 이미지 스타일 (이전과 동일) */
+        .hero-banner {
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://via.placeholder.com/1920x600?text=Your+Transportation+Image') no-repeat center center;
+            background-size: cover;
+            height: 450px;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            color: white;
+        }
+        /* 버튼 배경색이 배경에 가려질 경우 대비하여 약간 조정 (이전과 동일) */
+        .hero-banner .btn-success {
+            background-color: #28a745;
+            border-color: #28a745;
+            color: white;
+        }
+        /* 새롭게 추가된 부분: 메뉴바에 마우스 올렸을 때 링크 색상 */
+        .navbar-dark .navbar-nav .nav-link:hover,
+        .navbar-dark .navbar-brand:hover {
+            color: rgba(255, 255, 255, 0.75) !important; /* 살짝 연해지는 효과 */
+        }
     </style>
 </head>
 <body>
 
-    <!-- 내비게이션 바 (로그인/회원가입 버튼 포함) -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- 수정된 부분: 내비게이션 바 -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">교통-DAY</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,27 +104,30 @@
                     </li>
                     <!-- 기존에 있던 다른 메뉴 아이템들도 여기에 추가하면 돼 -->
                 </ul>
+                <!-- 수정된 부분: 로그인/회원가입 버튼 통일 -->
                 <div class="d-flex">
-                    <a href="로그인_페이지_링크.html" class="btn btn-outline-primary me-2">로그인</a>
-                    <a href="회원가입_페이지_링크.html" class="btn btn-primary">회원가입</a>
+                    <a href="로그인_페이지_링크.html" class="btn btn-light me-2">로그인</a>
+                    <a href="회원가입_페이지_링크.html" class="btn btn-light">회원가입</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <!-- 메인 컨텐츠 영역 -->
-    <div class="container mt-4">
-        <div class="row">
-            <div class="col-12">
-                <h1>교통덕후들을 위한 행사, 교통-DAY</h1>
-                <p class="lead">교통에 대한 모든 것을 경험해보세요!</p>
-                <p>주인님, 교통-DAY 홈페이지에 오신 것을 환영해요! 다양한 교통 관련 행사와 정보들을 만나보세요.</p>
-                <button class="btn btn-success btn-lg mb-5">행사 예약하기</button>
+    <!-- 메인 배너 (이전과 동일) -->
+    <section class="hero-banner">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-md-10 col-lg-8">
+                    <h1>교통덕후들을 위한 행사, 교통-DAY</h1>
+                    <p class="lead">교통에 대한 모든 것을 경험해보세요!</p>
+                    <p>주인님, 교통-DAY 홈페이지에 오신 것을 환영해요! 다양한 교통 관련 행사와 정보들을 만나보세요.</p>
+                    <button class="btn btn-success btn-lg mt-4">행사 예약하기</button>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
-    <!-- 추가된 부분 시작: 옆으로 스크롤 가능한 행사 설명 카드 섹션 -->
+    <!-- 옆으로 스크롤 가능한 행사 설명 카드 섹션 (이전과 동일) -->
     <section class="container my-5">
         <h2 class="text-center mb-4 animate-on-scroll">다가오는 특별한 교통 행사!</h2>
         <div class="horizontal-scroll-container">
@@ -148,23 +172,20 @@
             </div>
         </div>
     </section>
-    <!-- 추가된 부분 끝 -->
 
-
-    <!-- 추가된 부분 시작: 푸터 -->
+    <!-- 푸터 (이전과 동일) -->
     <footer class="bg-light text-center py-4 mt-5">
         <div class="container">
             <p class="text-muted mb-0">&copy; 2025 교통-DAY. 모든 권리 보유.</p>
-            <p class="text-muted mb-0">연락처: 추후제공</p>
+            <p class="text-muted mb-0">연락처: contact@trafficday.com</p>
         </div>
     </footer>
-    <!-- 추가된 부분 끝 -->
 
 
-    <!-- 부트스트랩 JS 추가 (반응형 메뉴 등 동작을 위해 필요해) -->
+    <!-- 부트스트랩 JS 추가 (이전과 동일) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
-    <!-- 스크롤 시 나타나는 애니메이션을 위한 JavaScript -->
+    <!-- 스크롤 시 나타나는 애니메이션을 위한 JavaScript (이전과 동일) -->
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const animateElements = document.querySelectorAll('.animate-on-scroll');
