--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>교통-DAY</title>
+    <title>교통-DAY:교통덕후들의 위한 행사</title>
     <!-- 부트스트랩 CSS 추가 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- 만약 여기에 주인님이 만든 CSS 파일이 있다면 추가해줘 -->
@@ -106,8 +106,8 @@
                 </ul>
                 <!-- 수정된 부분: 로그인/회원가입 버튼 통일 -->
                 <div class="d-flex">
-                    <a href="로그인_페이지_링크.html" class="btn btn-light me-2">로그인</a>
-                    <a href="회원가입_페이지_링크.html" class="btn btn-light">회원가입</a>
+                    <a href="로그인.html" class="btn btn-light me-2">로그인/회원가입</a>
+                    <a href="admin.html" class="btn btn-light">관리자 로그인</a>
                 </div>
             </div>
         </div>
@@ -136,7 +136,7 @@
                 <div class="card event-card mx-2 shadow-sm animate-on-scroll">
                     <img src="https://via.placeholder.com/300x200?text=Event+Image+1" class="card-img-top" alt="행사 이미지">
                     <div class="card-body">
-                        <h5 class="card-title">부산발 할로윈 행사</h5>
+                        <h5 class="card-title">부산발 할로윈행</h5>
                         <p class="card-text">으스스하지만 신나는 교통 체험! 10월 마지막 주말.</p>
                         <a href="부산발할로윈행방문예약폼.html" class="btn btn-primary">자세히 보기</a>
                     </div>
@@ -145,8 +145,8 @@
                 <div class="card event-card mx-2 shadow-sm animate-on-scroll">
                     <img src="https://via.placeholder.com/300x200?text=Event+Image+2" class="card-img-top" alt="행사 이미지">
                     <div class="card-body">
-                        <h5 class="card-title">버스 매니아의 날</h5>
-                        <p class="card-text">다양한 버스들을 한자리에서 만나보세요! 2025년 8월.</p>
+                        <h5 class="card-title">산타 드라이빙 부산</h5>
+                        <p class="card-text">산타가 부산 버스를 몰고 다닌다! 2025년 12월 20~21일</p>
                         <a href="#" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
@@ -154,8 +154,8 @@
                 <div class="card event-card mx-2 shadow-sm animate-on-scroll">
                     <img src="https://via.placeholder.com/300x200?text=Event+Image+3" class="card-img-top" alt="행사 이미지">
                     <div class="card-body">
-                        <h5 class="card-title">기차 여행 박람회</h5>
-                        <p class="card-text">낭만적인 기차 여행, 미리 계획하세요! 2025년 11월.</p>
+                        <h5 class="card-title">준비중</h5>
+                        <p class="card-text">-</p>
                         <a href="#" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
@@ -163,8 +163,8 @@
                 <div class="card event-card mx-2 shadow-sm animate-on-scroll">
                     <img src="https://via.placeholder.com/300x200?text=Event+Image+4" class="card-img-top" alt="행사 이미지">
                     <div class="card-body">
-                        <h5 class="card-title">선박의 모든 것</h5>
-                        <p class="card-text">항구에서 만나는 거대한 선박의 세계! 2026년 2월.</p>
+                        <h5 class="card-title">준비중</h5>
+                        <p class="card-text">-</p>
                         <a href="#" class="btn btn-primary">자세히 보기</a>
                     </div>
                 </div>
@@ -176,7 +176,7 @@
     <!-- 푸터 (이전과 동일) -->
     <footer class="bg-light text-center py-4 mt-5">
         <div class="container">
-            <p class="text-muted mb-0">&copy; 2025 교통-DAY. 모든 권리 보유.</p>
+            <p class="text-muted mb-0">&copy; 2025 교통-DAY. 모든 권리 보유. (홈페이지 제작: @bearman_ENTP)</p>
             <p class="text-muted mb-0">연락처: contact@trafficday.com</p>
         </div>
     </footer>
@@ -210,3 +210,4 @@
     </script>
 </body>
 </html>
+
